Fixing policyCard rendering on mobile.

--- a/src/pages/QuoteForm.module.css
+++ b/src/pages/QuoteForm.module.css
@@ -108,6 +108,6 @@ input[type=number]{
     }
 
     .policyCard{
-        width: 100%;
+        width: 80%;
     }
 }
